[gd_scene load_steps=7 format=3 uid="uid://ctwp28k5f9jq0"]

[ext_resource type="Script" path="res://scripts/managers/HUDManager.gd"]
[ext_resource type="Script" path="res://scripts/ui/InventoryUI.gd"]
[ext_resource type="Script" path="res://scripts/ui/CraftingUI.gd"]
[ext_resource type="Script" path="res://scripts/ui/QuestLogUI.gd"]
[ext_resource type="Script" path="res://scripts/ui/DialogueUI.gd"]

[sub_resource type="Theme" id="1"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
mouse_filter = 2
theme = SubResource("1")

[node name="HUDManager" type="Node" parent="."]
script = ExtResource("1")

[node name="HUDLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="MainHUD" type="Control" parent="HUDLayer"]
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="HUDLayer/MainHUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 1900.0
offset_bottom = 60.0

[node name="HealthLabel" type="Label" parent="HUDLayer/MainHUD/TopBar"]
custom_minimum_size = Vector2(200, 40)
text = "HP: 100/100"

[node name="HungerLabel" type="Label" parent="HUDLayer/MainHUD/TopBar"]
custom_minimum_size = Vector2(200, 40)
text = "Hunger: 100/100"

[node name="ThirstLabel" type="Label" parent="HUDLayer/MainHUD/TopBar"]
custom_minimum_size = Vector2(200, 40)
text = "Thirst: 100/100"

[node name="FactionLabel" type="Label" parent="HUDLayer/MainHUD/TopBar"]
custom_minimum_size = Vector2(300, 40)
text = "Faction: None"

[node name="TimeLabel" type="Label" parent="HUDLayer/MainHUD/TopBar"]
custom_minimum_size = Vector2(200, 40)
text = "Time: 12:00"

[node name="BottomBar" type="HBoxContainer" parent="HUDLayer/MainHUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 1040.0
offset_right = 1900.0
offset_bottom = 1080.0
alignment = 2

[node name="InventoryButton" type="Button" parent="HUDLayer/MainHUD/BottomBar"]
custom_minimum_size = Vector2(120, 40)
text = "Inventory (I)"

[node name="CraftingButton" type="Button" parent="HUDLayer/MainHUD/BottomBar"]
custom_minimum_size = Vector2(120, 40)
text = "Crafting (C)"

[node name="QuestButton" type="Button" parent="HUDLayer/MainHUD/BottomBar"]
custom_minimum_size = Vector2(120, 40)
text = "Quests (Q)"

[node name="MapButton" type="Button" parent="HUDLayer/MainHUD/BottomBar"]
custom_minimum_size = Vector2(120, 40)
text = "Map (M)"

[node name="NotificationPanel" type="PanelContainer" parent="HUDLayer/MainHUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 1080.0
offset_right = 600.0
offset_bottom = 1090.0

[node name="NotificationList" type="VBoxContainer" parent="HUDLayer/MainHUD/NotificationPanel"]
layout_mode = 2

[node name="InventoryUILayer" type="CanvasLayer" parent="."]
layer = 101

[node name="InventoryUI" type="Control" parent="InventoryUILayer"]
visible = false
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
script = ExtResource("2")

[node name="BackgroundPanel" type="PanelContainer" parent="InventoryUILayer/InventoryUI"]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 900.0
offset_bottom = 1030.0

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryUILayer/InventoryUI/BackgroundPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="InventoryUILayer/InventoryUI/BackgroundPanel/VBoxContainer"]
text = "Inventory"
custom_minimum_size = Vector2(0, 40)

[node name="ItemList" type="ItemList" parent="InventoryUILayer/InventoryUI/BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(700, 850)
layout_mode = 2

[node name="CloseButton" type="Button" parent="InventoryUILayer/InventoryUI/BackgroundPanel/VBoxContainer"]
text = "Close (I)"
custom_minimum_size = Vector2(0, 40)

[node name="CraftingUILayer" type="CanvasLayer" parent="."]
layer = 101

[node name="CraftingUI" type="Control" parent="CraftingUILayer"]
visible = false
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
script = ExtResource("3")

[node name="BackgroundPanel" type="PanelContainer" parent="CraftingUILayer/CraftingUI"]
layout_mode = 0
offset_left = 1000.0
offset_top = 50.0
offset_right = 1900.0
offset_bottom = 1030.0

[node name="VBoxContainer" type="VBoxContainer" parent="CraftingUILayer/CraftingUI/BackgroundPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="CraftingUILayer/CraftingUI/BackgroundPanel/VBoxContainer"]
text = "Crafting"
custom_minimum_size = Vector2(0, 40)

[node name="RecipeList" type="ItemList" parent="CraftingUILayer/CraftingUI/BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(800, 650)
layout_mode = 2

[node name="RecipeDetails" type="Label" parent="CraftingUILayer/CraftingUI/BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
text = "Select a recipe to craft"
wrap_enabled = true

[node name="CraftButton" type="Button" parent="CraftingUILayer/CraftingUI/BackgroundPanel/VBoxContainer"]
text = "Craft"
custom_minimum_size = Vector2(0, 40)

[node name="CloseButton" type="Button" parent="CraftingUILayer/CraftingUI/BackgroundPanel/VBoxContainer"]
text = "Close (C)"
custom_minimum_size = Vector2(0, 40)

[node name="QuestUILayer" type="CanvasLayer" parent="."]
layer = 101

[node name="QuestLogUI" type="Control" parent="QuestUILayer"]
visible = false
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
script = ExtResource("4")

[node name="BackgroundPanel" type="PanelContainer" parent="QuestUILayer/QuestLogUI"]
layout_mode = 0
offset_left = 100.0
offset_top = 50.0
offset_right = 900.0
offset_bottom = 1030.0

[node name="VBoxContainer" type="VBoxContainer" parent="QuestUILayer/QuestLogUI/BackgroundPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="QuestUILayer/QuestLogUI/BackgroundPanel/VBoxContainer"]
text = "Quest Log"
custom_minimum_size = Vector2(0, 40)

[node name="QuestList" type="ItemList" parent="QuestUILayer/QuestLogUI/BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(700, 750)
layout_mode = 2

[node name="QuestDetails" type="Label" parent="QuestUILayer/QuestLogUI/BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
text = "Select a quest to view details"
wrap_enabled = true

[node name="CloseButton" type="Button" parent="QuestUILayer/QuestLogUI/BackgroundPanel/VBoxContainer"]
text = "Close (Q)"
custom_minimum_size = Vector2(0, 40)

[node name="DialogueUILayer" type="CanvasLayer" parent="."]
layer = 102

[node name="DialogueUI" type="Control" parent="DialogueUILayer"]
visible = false
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
script = ExtResource("5")

[node name="DialoguePanel" type="PanelContainer" parent="DialogueUILayer/DialogueUI"]
layout_mode = 0
offset_left = 200.0
offset_top = 800.0
offset_right = 1720.0
offset_bottom = 1060.0

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueUILayer/DialogueUI/DialoguePanel"]
layout_mode = 2
separation = 10

[node name="NPCName" type="Label" parent="DialogueUILayer/DialogueUI/DialoguePanel/VBoxContainer"]
text = "NPC Name"
custom_minimum_size = Vector2(0, 30)

[node name="DialogueText" type="Label" parent="DialogueUILayer/DialogueUI/DialoguePanel/VBoxContainer"]
text = "Dialogue text here..."
custom_minimum_size = Vector2(0, 100)
wrap_enabled = true

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogueUILayer/DialogueUI/DialoguePanel/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
separation = 5

[node name="Choice1" type="Button" parent="DialogueUILayer/DialogueUI/DialoguePanel/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(0, 30)
text = "Choice 1"

[node name="Choice2" type="Button" parent="DialogueUILayer/DialogueUI/DialoguePanel/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(0, 30)
text = "Choice 2"

[node name="Choice3" type="Button" parent="DialogueUILayer/DialogueUI/DialoguePanel/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(0, 30)
text = "Choice 3"

[connection signal="pressed" from="HUDLayer/MainHUD/BottomBar/InventoryButton" to="InventoryUILayer/InventoryUI" method="_on_open"]
[connection signal="pressed" from="HUDLayer/MainHUD/BottomBar/CraftingButton" to="CraftingUILayer/CraftingUI" method="_on_open"]
[connection signal="pressed" from="HUDLayer/MainHUD/BottomBar/QuestButton" to="QuestUILayer/QuestLogUI" method="_on_open"]
[connection signal="pressed" from="InventoryUILayer/InventoryUI/BackgroundPanel/VBoxContainer/CloseButton" to="InventoryUILayer/InventoryUI" method="_on_close"]
[connection signal="pressed" from="CraftingUILayer/CraftingUI/BackgroundPanel/VBoxContainer/CloseButton" to="CraftingUILayer/CraftingUI" method="_on_close"]
[connection signal="pressed" from="QuestUILayer/QuestLogUI/BackgroundPanel/VBoxContainer/CloseButton" to="QuestUILayer/QuestLogUI" method="_on_close"]
